--- a/app/blocks/orders/header-item.twig
+++ b/app/blocks/orders/header-item.twig
@@ -1,31 +1,39 @@
 <div class="orders-section__header-item">
-  <div class="orders-section__status-order">
-    <div class="orders-section__status-top">
-      <span class="orders-section__status-number">{{ order.number }}</span>
-      <span class="orders-section__status-date">{{ order.date }}</span>
+  <div class="orders-section__header-wrap">
+    <div class="orders-section__status-order">
+      <div class="orders-section__status-top">
+        <span class="orders-section__status-number">{{ order.number }}</span>
+        <span class="orders-section__status-date">{{ order.date }}</span>
+      </div>
+      <div class="orders-section__status-bottom orders-section__status-bottom--{{ order.statusColor }}">{{ order.status }}</div>
     </div>
-    <div class="orders-section__status-bottom orders-section__status-bottom--{{ order.statusColor }}">{{ order.status }}</div>
-  </div>
-  <div class="orders-section__sum-order">
-    <span class="orders-section__sum-title">Сумма заказа:</span>
-    <span class="orders-section__sum-value">{{ order.sum }}</span>
+    <div class="orders-section__sum-order">
+      <span class="orders-section__sum-title">Сумма заказа:</span>
+      <span class="orders-section__sum-value">{{ order.sum }}</span>
+    </div>
   </div>
   <div class="orders-section__product-order">
     <div class="orders-section__product-wrap">
+      {% if order.jpgImg1 %}
       <picture>
         <source type="image/webp" srcset="./assets/images/pixel.png" data-srcset="{{ order.webpImg1 }}">
         <img class="lazy orders-section__img" src="./assets/images/pixel.png" data-src="{{ order.jpgImg1 }}" alt="img">
       </picture>
+      {% endif %}
+      {% if order.jpgImg2 %}
       <picture>
         <source type="image/webp" srcset="./assets/images/pixel.png" data-srcset="{{ order.webpImg2 }}">
         <img class="lazy orders-section__img" src="./assets/images/pixel.png" data-src="{{ order.jpgImg2 }}" alt="img">
       </picture>
+      {% endif %}
+      {% if order.jpgImg3 %}
       <picture>
         <source type="image/webp" srcset="./assets/images/pixel.png" data-srcset="{{ order.webpImg3 }}">
         <img class="lazy orders-section__img" src="./assets/images/pixel.png" data-src="{{ order.jpgImg3 }}" alt="img">
       </picture>
+      {% endif %}
     </div>
-    <button class="orders-section__btn">
+    <button class="orders-section__btn js-orders-btn">
       <svg class="orders-section__btn-icon" viewBox="0 0 100 100">
         <use xlink:href="./assets/images/sprite.svg#order-arrow"></use>
       </svg>
