--- a/app/blocks/orders/status-info.twig
+++ b/app/blocks/orders/status-info.twig
@@ -18,4 +18,10 @@
       <dd class="status-info__descr">Оплата на сайте</dd>
     </div>
   {% endif %}
+
+  {% if status.btn %}
+  <button class="status-info__btn">
+    Оформить заказ повторно
+  </button>
+  {% endif %}
 </dl>
