--- a/app/pages/index.twig
+++ b/app/pages/index.twig
@@ -30,6 +30,9 @@
         <a class="progress__link" href="./catalog.html" target="_blank">Каталог</a>
       </li>
       <li class="progress__item">
+        <a class="progress__link" href="./product-card.html" target="_blank">Карточка товара</a>
+      </li>
+      <li class="progress__item">
         <a class="progress__link" href="./basket.html" target="_blank">Корзина</a>
       </li>
       <li class="progress__item">
@@ -37,6 +40,9 @@
       </li>
       <li class="progress__item">
         <a class="progress__link" href="./active-orders.html" target="_blank">Активные заказы</a>
+      </li>
+      <li class="progress__item">
+        <a class="progress__link" href="./finish-orders.html" target="_blank">Завершенные заказы</a>
       </li>
       <li class="progress__item">
         <a class="progress__link" href="./ordering.html" target="_blank">Оформление заказа</a>
