--- a/app/blocks/head/head.twig
+++ b/app/blocks/head/head.twig
@@ -36,6 +36,8 @@
   <link rel="stylesheet" href="./assets/libs/css/nouislider.min.css">
   <!-- font-awesome for datepicker -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css">
+  <!-- glightbox -->
+  <link rel="stylesheet" href="./assets/libs/css/glightbox.min.css">
   <!--Styles-->
   <link id="app-css" rel="stylesheet" href="./assets/styles/app.min.css">
   <script>
