--- a/app/pages/product-card.twig
+++ b/app/pages/product-card.twig
@@ -23,67 +23,92 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <picture>
-                <source srcset="./assets/images/pixel.png" data-srcset="./assets/images/card/01.webp" type="image/webp">
-                <img alt="img" class="card-page__slider-img lazy" src="./assets/images/pixel.png" data-src="./assets/images/card/01.jpg" />
+                <source srcset="./assets/images/pixel.png" data-srcset="./assets/images/card/01_s.webp" type="image/webp">
+                <img alt="img" class="card-page__slider-img lazy" src="./assets/images/pixel.png" data-src="./assets/images/card/01_s.jpg" />
               </picture>
             </div>
             <div class="swiper-slide">
               <picture>
-                <source srcset="./assets/images/pixel.png" data-srcset="./assets/images/card/01.webp" type="image/webp">
-                <img alt="img" class="card-page__slider-img lazy" src="./assets/images/pixel.png" data-src="./assets/images/card/01.jpg" />
+                <source srcset="./assets/images/pixel.png" data-srcset="./assets/images/card/02_s.webp" type="image/webp">
+                <img alt="img" class="card-page__slider-img lazy" src="./assets/images/pixel.png" data-src="./assets/images/card/02_s.jpg" />
               </picture>
             </div>
             <div class="swiper-slide">
               <picture>
-                <source srcset="./assets/images/pixel.png" data-srcset="./assets/images/card/01.webp" type="image/webp">
-                <img alt="img" class="card-page__slider-img lazy" src="./assets/images/pixel.png" data-src="./assets/images/card/01.jpg" />
+                <source srcset="./assets/images/pixel.png" data-srcset="./assets/images/card/03_s.webp" type="image/webp">
+                <img alt="img" class="card-page__slider-img lazy" src="./assets/images/pixel.png" data-src="./assets/images/card/03_s.jpg" />
               </picture>
             </div>
             <div class="swiper-slide">
               <picture>
-                <source srcset="./assets/images/pixel.png" data-srcset="./assets/images/card/01.webp" type="image/webp">
-                <img alt="img" class="card-page__slider-img lazy" src="./assets/images/pixel.png" data-src="./assets/images/card/01.jpg" />
+                <source srcset="./assets/images/pixel.png" data-srcset="./assets/images/card/04_s.webp" type="image/webp">
+                <img alt="img" class="card-page__slider-img lazy" src="./assets/images/pixel.png" data-src="./assets/images/card/04_s.jpg" />
               </picture>
             </div>
+          </div>
+          <div class="swiper-button-next">
+            <svg class="card-page__btn" viewBox="0 0 100 100">
+              <use xlink:href="./assets/images/sprite.svg#arrow-top"></use>
+            </svg>
+          </div>
+          <div class="swiper-button-prev">
+            <svg class="card-page__btn" viewBox="0 0 100 100">
+              <use xlink:href="./assets/images/sprite.svg#arrow-bottom"></use>
+            </svg>
           </div>
         </div>
         <div class="swiper galleryMain card-page__gallery-main">
           <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <picture>
-                <source srcset="./assets/images/pixel.png" data-srcset="./assets/images/card/01.webp" type="image/webp">
-                <img alt="img" class="card-page__slider-img lazy" src="./assets/images/pixel.png" data-src="./assets/images/card/01.jpg"/>
-              </picture>
+            <div class="swiper-slide card-page__gallery-main-slide">
+              <span class="card-page__gallery-label">trend</span>
+              <a class="glightbox card-page__img-link" data-gallery="gallery" href="./assets/images/card/01.jpg">
+                <picture>
+                  <source srcset="./assets/images/pixel.png" data-srcset="./assets/images/card/01.webp" type="image/webp">
+                  <img alt="img" class="card-page__slider-img lazy" src="./assets/images/pixel.png" data-src="./assets/images/card/01.jpg"/>
+                </picture>
+              </a>
             </div>
-            <div class="swiper-slide">
-              <picture>
-                <source srcset="./assets/images/pixel.png" data-srcset="./assets/images/card/01.webp" type="image/webp">
-                <img alt="img" class="card-page__slider-img lazy" src="./assets/images/pixel.png" data-src="./assets/images/card/01.jpg"/>
-              </picture>
+            <div class="swiper-slide card-page__gallery-main-slide">
+              <span class="card-page__gallery-label">trend</span>
+              <a class="glightbox card-page__img-link" data-gallery="gallery" href="./assets/images/card/01.jpg">
+                <picture>
+                  <source srcset="./assets/images/pixel.png" data-srcset="./assets/images/card/01.webp" type="image/webp">
+                  <img alt="img" class="card-page__slider-img lazy" src="./assets/images/pixel.png" data-src="./assets/images/card/01.jpg"/>
+                </picture>
+              </a>
             </div>
-            <div class="swiper-slide">
-              <picture>
-                <source srcset="./assets/images/pixel.png" data-srcset="./assets/images/card/01.webp" type="image/webp">
-                <img alt="img" class="card-page__slider-img lazy" src="./assets/images/pixel.png" data-src="./assets/images/card/01.jpg"/>
-              </picture>
+            <div class="swiper-slide card-page__gallery-main-slide">
+              <span class="card-page__gallery-label">trend</span>
+              <a class="glightbox card-page__img-link" data-gallery="gallery" href="./assets/images/card/01.jpg">
+                <picture>
+                  <source srcset="./assets/images/pixel.png" data-srcset="./assets/images/card/01.webp" type="image/webp">
+                  <img alt="img" class="card-page__slider-img lazy" src="./assets/images/pixel.png" data-src="./assets/images/card/01.jpg"/>
+                </picture>
+              </a>
             </div>
-            <div class="swiper-slide">
-              <picture>
-                <source srcset="./assets/images/pixel.png" data-srcset="./assets/images/card/01.webp" type="image/webp">
-                <img alt="img" class="card-page__slider-img lazy" src="./assets/images/pixel.png" data-src="./assets/images/card/01.jpg"/>
-              </picture>
+            <div class="swiper-slide card-page__gallery-main-slide">
+              <span class="card-page__gallery-label">trend</span>
+              <a class="glightbox card-page__img-link" data-gallery="gallery" href="./assets/images/card/01.jpg">
+                <picture>
+                  <source srcset="./assets/images/pixel.png" data-srcset="./assets/images/card/01.webp" type="image/webp">
+                  <img alt="img" class="card-page__slider-img lazy" src="./assets/images/pixel.png" data-src="./assets/images/card/01.jpg"/>
+                </picture>
+              </a>
             </div>
           </div>
         </div>
-        <div class="swiper-button-next">
-          <img class="lazy card-page__btn-top" src="./assets/images/pixel.png" data-src="./assets/images/icons/slide-btn-prev.png" alt="img">
-        </div>
-        <div class="swiper-button-prev">
-          <img class="lazy card-page__btn-prev" src="./assets/images/pixel.png" data-src="./assets/images/icons/slide-btn-prev.png" alt="img">
-        </div>
       </div>
       <div class="card-page__product-content">
-
+        <div class="card-page__product-wrap">
+          <div class="card-page__product-header">
+            <div class="card-page__product-brand">SCHUTZ</div>
+            <h1 class="card-page__product-title">Женские зеленые кожаные сапоги</h1>
+          </div>
+          <div class="card-page__product-prices">
+            <span class="card-page__current-price">2 350 ₽</span>
+            <span class="card-page__old-price">3 200 ₽</span>
+          </div>
+        </div>
       </div>
     </article>
     {% include "../blocks/viewed-products/viewed-products.twig" %}
