--- a/app/blocks/main-card/main-card.scss
+++ b/app/blocks/main-card/main-card.scss
@@ -1,6 +1,13 @@
 .card-page {
   &__product {
     display: flex;
+    margin-bottom: 5rem;
+
+    > * {
+      &:not(:last-child) {
+        margin-right: 5rem;
+      }
+    }
   }
 
   &__slider-block {
@@ -12,6 +19,28 @@
         margin-right: 1rem;
       }
     }
+
+    .swiper-button-prev,
+    .swiper-button-next {
+      &::after {
+        content: none;
+      }
+    }
+
+    .swiper-button-next {
+      right: unset;
+      left: 50%;
+      transform: translateX(-50%);
+      top: 2rem;
+    }
+
+    .swiper-button-prev {
+      left: 50%;
+      right: unset;
+      transform: translateX(-50%);
+      top: unset;
+      bottom: 0;
+    }
   }
 
   &__gallery-main {
@@ -20,10 +49,93 @@
 
   &__gallery-thumbs {
     width: 12rem;
+
+    .swiper-slide {
+      opacity: 0.5;
+      transition: opacity 0.3s;
+
+      &:hover {
+        opacity: 1;
+      }
+    }
+
+    .swiper-slide-thumb-active {
+      opacity: 1;
+    }
   }
 
-  &__product-content {
-    width: 68.5rem;
-    border: 0.1rem solid var(--red);
+  &__btn {
+    width: 4rem;
+    height: 4rem;
+    fill: var(--black);
+    transition: fill 0.3s;
+
+    &:hover {
+      fill: var(--green);
+    }
+  }
+
+  &__gallery-label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    font-size: 1.6rem;
+    line-height: 2.6rem;
+    color: var(--white);
+    background-color: var(--black);
+    padding: 1rem 0.5rem;
+    writing-mode: vertical-lr;
+    transform: rotate(180deg);
+  }
+
+  &__img-link {
+    cursor: url('../../assets/images/sprite-icons/search.svg'), auto;
+  }
+
+  // content
+  &__product-wrap {
+    > * {
+      &:not(:last-child) {
+        margin-bottom: 3rem;
+      }
+    }
+  }
+
+  &__product-brand {
+    font-size: 1.6rem;
+    line-height: 2rem;
+    font-weight: 700;
+  }
+
+  &__product-title {
+    font-size: 4rem;
+    line-height: 5rem;
+    font-weight: 400;
+  }
+
+  &__product-prices {
+    @extend %flex-center-y;
+
+    > * {
+      &:not(:last-child) {
+        margin-right: 2rem;
+      }
+    }
+  }
+
+  &__current-price {
+    font-size: 2.6rem;
+    line-height: 2.6rem;
+    font-weight: 700;
+    color: var(--red);
+  }
+
+  &__old-price {
+    font-size: 1.6rem;
+    line-height: 2.6rem;
+    font-weight: 400;
+    text-decoration: line-through;
+    color: var(--gray3);
   }
 }
